--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   flex-direction: row-reverse;
   width: 1200px;
   margin: 0 auto;
+  overflow-y: scroll;
 }
 /* Sidebar styles */
 .Sidebar {
