--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 .main {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: left;
   width: 1200px;
   margin: 0 auto;
   overflow-y: scroll;
